--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Acerca de MDHL</title>
 </head>
 <body>
-
+    prueba
     <header>
         <img src="./Logo Mighty ducks-01.png" alt="Mighty Ducks Logo" style="height: 90px; margin-right: 30px;">
         <div>
